Change to a stop-watch way to continuously monitoring & update usage. Hope chrome could stop the watch while it's minimixed.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -67,7 +67,7 @@
 		"description": "目前使用量正常"
 	},
 	"friendly_reminder_overdose_usage": {
-		"message": "Stop using Facebook now! You're overdosed!",
+		"message": "Stop using Facebook now! \nYou're overdosed!",
 		"description": "目前使用超量"
 	},
 	"no_usage_for_now": {
