Fix Content Policy problem with updated jquery Update README

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,7 +1,7 @@
 {
 	"extName":
 	{
-		"message": "Facebook Usage Timer",
+		"message": "Facebook Usage Meter",
 		"description":"擴充套件名稱"
 	},
 	"extDescription":
